styles/style.css
:root{
    --backgroundColor: hsl(0, 0%, 100%);
    --backgroundColor2: hsl(212, 40%, 90%);
    --textBackground: white;
    --navBackground: hsl(0, 0%, 100%, 0.9);
    --textColor: black;
    --nightThemeSelector: white;
    --dayThemeSelector: hsl(0, 0%, 80%);
    --navHover: hsl(0, 0%, 80%);

}

#languageEn {
    display: none;
}

#languageHun{
    display: block;
}

i {
    font-style: italic;
}
/* --------------- Color settings--------------*/

body{
    background-color: var(--backgroundColor);
    transition: 0.2s;
}
a, li, h1, h2, h3, p {
    color: var(--textColor);
}

h1{
    font-size: 3rem;
}

h3{
    font-size: 2rem;
    font-weight:bold;
}
b{
    font-weight: bold;
}

p{
    font-size: 1.3rem;
}

 /* ------------------------------ Navigation------------------------------*/

nav{
    background-color: var(--navBackground);
    display: flex;
    justify-content: space-between;
    position: fixed;
    width: 100%;
    padding: 0.2rem 0;
    top: 0;
    z-index: 1000;
}

.leftnav , .brightnessmode,.brightnessmode a, .language, .rightnav, .rightnav ul li{
    display:inline-flex;
    flex-direction: row;
    align-items: center;
}

.brightnessmode .dark a{
    margin-left: 1rem;
    border: 0.1rem solid var(--backgroundColor);
    border-radius: 50%;
    background-image: url("../images/moon.png");
    width: 2rem;
    height: 2rem;
    background-size: cover;
    background-position: center;
}

.brightnessmode .bright a{
    margin-left: 1rem;
    border: 0.1rem solid var(--backgroundColor);
    border-radius: 50%;
    background-image: url("../images/sun.png");
    width: 2rem;
    height: 2rem;
    background-size: cover;
    background-position: center;
}

.language a{
    margin-left: 1rem;
}

.rightnav li{
    margin-right: 1rem;
}

.rightnav ul{
    list-style: none;
    padding: 0;
    margin: 0;
}

.mobile-nav-toggle{
    display: none;
}

/*--- Hover effects: Brightness---*/

.brightnessmode a:hover{
    border: 0.1rem solid var(--textColor);
    transition: 0.5s;
}

/*--- Hover effects: Language/ Pages---*/
.hover-underline-animation {
    display: inline-block;
    position: relative;
    font-size: 18px;
  }
  
  .hover-underline-animation:after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 0.1rem;
    bottom: -0.2rem;
    left: 0;
    background-color: var(--textColor);
    transform-origin: bottom left;
    transition: transform 0.2s ease-out;
  }
  
  .hover-underline-animation:hover:after {
    transform: scaleX(1);
    transform-origin: bottom left;
  }

/* --------------- Wellcome part (changed based on media screen)--------------*/
.wellcome{
    margin-top: 2.8rem;
    background-image: url("../images/blue-gcd5ed2e9e_1280.jpg");
    background-position: center;
    width: 100%;
    height: 20rem;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: left;
    align-items: center;
    
}
.wellcome h1{
    background-color: var(--textBackground);
    padding: 1rem;
    border-radius: 0.5rem;
    text-align: left;
    opacity: 0.8;
    height: 100%;
    margin-left: 5rem;
    margin-right: 5rem;
    width: fit-content;
    box-shadow: 5px 5px 15px 5px var(--textColor);

}

/*111111111111111111111111111111111 Home page 111111111111111111111111111111111111*/
/* --------------- Introduction part (changed based on media screen)--------------*/
.introduction{
    display: flex;
    flex-wrap:wrap-reverse;
    width: 100%;
    justify-content: space-around;
    align-items:flex-end;
    margin: 2rem auto 2rem auto;
    background-color: var(--backgroundColor);
    

}

.introduction p{
    max-width: 26rem;
    height: fit-content;
    background-color: var(--textBackground);
    padding: 3rem;
    margin: 0.5rem;
    border-radius: 3rem;
    font-size: 1.9rem;
    box-shadow: 5px 5px 15px 5px var(--textColor);
}
.introduction p a{
    color: hsl(180, 100%, 25%);
}

.introduction p a:hover{
    color: hsl(0, 100%, 25%);
}

.introduction img{
    max-width: 35%;
    min-width: 16rem;
    height: fit-content;
    border-radius: 2rem;
    margin: 0.5rem;
    background-color: var(--textBackground);
    box-shadow: 5px 5px 15px 5px var(--textColor);
}

/* --------------- Job History part (changed based on media screen)--------------*/
.jobHistory{
    background-color: var(--backgroundColor2);
}

.jobHistory h2{
    font-size: 2rem;
    font-weight: bold;
    background-color: var(--backgroundColor2);
    padding: 2rem;
    border-top: 5px solid gray;
}

.jobBoxes{
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    background-color: var(--backgroundColor2);
    padding-bottom: 2rem;
    border-bottom: 5px solid gray;
}

.jobBox{
    background-color: var(--backgroundColor);
    border-radius: 0.5rem;
    margin: 2rem;
    display: flexbox;
    height:fit-content;
    width:380px;
    padding: 1rem;
    box-shadow: 5px 5px 15px 5px var(--textColor);
    transition: 0.2s;
}

.jobBox:hover{
    margin: 1.5rem;
    padding: 1.5rem;
    box-shadow: 10px 10px 20px 10px var(--textColor);
    transition: 0.2s;
}

.jobBox img{
    height: 200px;
    width: 300px;
    align-items: center;
    text-align: center;
    margin: 0 40px;
}
.jobBox h3{
    text-align: center;
}

.jobBox p{
    padding: 1rem 0.5rem;
    text-align: justify;
}

/* --------------- Studies part --------------*/
.studies{
    background-color: var(--backgroundColor);
}

.studies h2{
    font-size: 2rem;
    font-weight: bold;
    background-color: var(--backgroundColor);
    padding: 2rem;
}

.studieBoxes{
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    background-color: var(--backgroundColor);
    border-bottom: 5px solid gray;
    padding-bottom: 2rem;
}

.studieBox{
    background-color: var(--backgroundColor2);
    border-radius: 0.5rem;
    margin: 2rem;
    display: flexbox;
    min-height: 20rem;
    max-width:500px;
    max-height: 50rem;
    min-width:300px;
    padding: 1rem;
    box-shadow: 5px 5px 15px 5px var(--textColor);
    transition: 0.2s;
}

.studieBox:hover{
    margin: 1.5rem;
    padding: 1.5rem;
    transition: 0.2s;
    box-shadow: 10px 10px 20px 10px var(--textColor);
}

.studieBox h3{
    text-align: center;
}

.studieBox p{
    padding: 1rem 0.5rem;
    text-align: justify;
}

/*222222222222222222222222222222222 About me page 22222222222222222222222222222222222222*/

.aboutMeBoxes{
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    background-color: var(--backgroundColor2);
    margin: 1rem 5%;
    border-radius: 1rem;
}

.aboutMeBox{
    background-color: var(--backgroundColor2);
    border-radius: 0.5rem;
    width: 100%;
    display: flex;
    padding: 1rem;
    transition: 0.2s;
    line-height: 2rem;
    text-align: justify;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
}

.aboutMeBox p{
    max-width: 600px;
    min-width: 200px;
    margin:1rem 0.5rem;
}

.aboutMeBox a{
    
    height: 20rem;
    width: 20rem;
    display: flex;
    margin: 2rem 0;   
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

.aboutMeBox .aboutMeImg1{
    background-image: url("../images/artificial-intelligence.png");
}
.aboutMeBox .aboutMeImg2{
    background-image: url("../images/man.png");
}
.aboutMeBox .aboutMeImg3{
    background-image: url("../images/website.png");
}

.aboutMeBoxes .reverseWrap{
    flex-wrap: wrap-reverse;
}

/* ///////////////////////////////// Media screens changes ////////////////////////////////////// */

@media only screen and (max-width: 1200px) {
   /* -Introduction part-*/
    .introduction p{
        font-size: 1.5rem;
        max-width: 21rem;
        padding: 2rem;
    }
}

@media only screen and (max-width: 710px) {
    /* -Introduction part-*/
    .introduction p{
        font-size: 1.2rem;
        max-width: 17rem;
        padding: 0.7rem;
        border-radius: 1rem;
    }
}

@media only screen and (max-width: 600px) {
    /* -Navigation part-*/
    .primary-navigation{
        position: fixed;
        display: flex;
        inset: 0 0 0 50%;
        flex-direction: column;
        align-items: flex-start;
        padding: min(20vh, 5rem) 2rem;
        background: var(--navBackground);
        backdrop-filter: blur(0.3rem);
        transform: translateX(100%);
        transition: 0.5s ease-out;
    }

    .primary-navigation[data-visible="true"]{
        transform: translateX(0%);
    } 

    .rightnav ul li{
        display: flex;
        font-weight: bold;
        padding: 1.5rem 0;
    }

    .mobile-nav-toggle{
        position: absolute;
        display: block;
        z-index: 9999;
        background-color: transparent;
        background-image: url("../images/hamburger.png");
        background-repeat: no-repeat;
        background-size: cover;
        border: 0;
        width: 1.5rem;
        aspect-ratio: 1;
        top: 0.5rem;
        right: 1rem;
    }
    .mobile-nav-toggle[aria-expanded="true"]
    {
        background-image: url("../images/close.png");
    }
    
    /* -Wellcome part-*/
    .wellcome h1{
        font-size: 2rem;
        margin-left: 1rem;
        margin-right: 1rem;
    }
    /* 11111 Home page 11111*/
    /* -Introduction part-*/
    .introduction img{
        border-radius: 0.5rem;
        max-width: 90%;
    }
    .introduction p{
        border-radius: 0.5rem;
        max-width: 100%;
    }

    /* -Job history part-*/
    .jobBox{
        width:300px;
    }
    
    .jobBox img{
        margin: 0;
    }

    /* 22222 About me page 22222-*/
    .aboutMeBox a{
    
        height: 16rem;
        width: 16rem; 
    }

}

